--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
     // junit5
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -29,6 +30,9 @@ dependencies {
 
     // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // postgresql
+    implementation 'org.postgresql:postgresql:42.7.2'
 
     // lombok
     implementation 'org.projectlombok:lombok:1.18.22'
