--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,16 @@
-spring.application.name=meetingroom
+spring:
+  application:
+    name: meetingroom
+springdoc:
+  swagger-ui:
+    path: /docs
+    operationsSorter: alpha
+    tagsSorter: alpha
+  api-docs:
+    path: /api-docs
+
+logging:
+  level:
+    com.example.meeting-room: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
