--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15
@@ -9,8 +7,8 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_DB: meetingroom
-      POSTGRES_USER: byeongdoohan
-      POSTGRES_PASSWORD: p@ssw0rd
+      POSTGRES_USER: ${USERNAME}
+      POSTGRES_PASSWORD: ${PASSWORD}
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
@@ -18,6 +16,15 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+
+  redis:
+    image: redis:latest
+    container_name: meetingroom-redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
 
   app:
     build:
@@ -29,12 +36,18 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_started
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://meetingroom-postgres:5432/meetingroom
-      SPRING_DATASOURCE_USERNAME: byeongdoohan
-      SPRING_DATASOURCE_PASSWORD: p@ssw0rd
+      SPRING_DATASOURCE_USERNAME: ${USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${PASSWORD}
+      SPRING_REDIS_HOST: meetingroom-redis
+      SPRING_REDIS_PORT: 6379
+      JWT_SECRET: ${JWT_SECRET}
     volumes:
       - ./logs:/app/logs  # Optional: for persistent logs
 
 volumes:
   pgdata:
+  redis-data:
