--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,20 @@
 spring:
   application:
     name: meetingroom
+  data:
+    redis:
+      port: 6379
+      host: meetingroom-redis
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+        use_sql_comments: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
 springdoc:
   swagger-ui:
     path: /docs
@@ -14,3 +28,6 @@ logging:
     com.example.meeting-room: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+jwt:
+  access-token-validity-in-seconds: 3600
+  refresh-token-validity-in-seconds: 86400
