--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,12 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    // h2
+    testImplementation("com.h2database:h2:2.2.224")
+    implementation 'com.h2database:h2:2.2.224'
 
-
+    // validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
