--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,30 @@ services:
     volumes:
       - ./logs:/app/logs  # Optional: for persistent logs
 
+  mock-pg-a-card:
+    build:
+      context: ./mock-pg-a-card
+      dockerfile: Dockerfile
+    container_name: meetingroom-mock-pg-a-card
+    ports:
+      - "8089:8080"
+
+  mock-pg-b-simple:
+    build:
+      context: ./mock-pg-b-simple
+      dockerfile: Dockerfile
+    container_name: meetingroom-mock-pg-b-simple
+    ports:
+      - "8090:8080"
+
+  mock-pg-c-virtual:
+    build:
+      context: ./mock-pg-c-virtual
+      dockerfile: Dockerfile
+    container_name: meetingroom-mock-pg-c-virtual
+    ports:
+      - "8091:8080"
+
 volumes:
   pgdata:
   redis-data:
