--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,9 +29,9 @@ logging:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 jwt:
-  secret:
+  secret: ${JWT_SECRET}
   access-token-validity-in-seconds: 3600
   refresh-token-validity-in-seconds: 86400
 encryption:
   aes:
-    key:
+    key: ${ENCRYPTION_AES_KEY}
